[gd_scene load_steps=12 format=3 uid="uid://c2gbss4jwhyhl"]

[ext_resource type="Script" path="res://Enemies/BasicEnemy.gd" id="1_2rskt"]
[ext_resource type="PackedScene" uid="uid://x7ruxh1dbsp6" path="res://Effects/punch_shockwave.tscn" id="2_52n48"]
[ext_resource type="Texture2D" uid="uid://i4ieveg4cd1m" path="res://Art/Brandon.png" id="2_qpj02"]
[ext_resource type="Script" path="res://Effects/SoftBody.gd" id="4_ugpfv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7svlq"]
radius = 641.175

[sub_resource type="CircleShape2D" id="CircleShape2D_nw1a5"]
radius = 25.02

[sub_resource type="Animation" id="Animation_qkxy0"]
resource_name = "Charging"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art/RArm:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.582549, 6.27669e-07, 8.4796e-08, 1), Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Art:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.349066]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Art/RArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(20, -20), Vector2(30, -10)]
}

[sub_resource type="Animation" id="Animation_mv5rb"]
resource_name = "Punch"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art/RArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(30, -10), Vector2(20, -40), Vector2(20, -40), Vector2(20, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Art/RArm:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 1), Color(0.584314, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Art:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.349066, -0.349066, -0.349066, 0.0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_shockwave"
}]
}

[sub_resource type="Animation" id="Animation_440o6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art/RArm:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.582549, 6.27669e-07, 8.4796e-08, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Art:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Art/RArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, -20)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ref8m"]
_data = {
"Charging": SubResource("Animation_qkxy0"),
"Punch": SubResource("Animation_mv5rb"),
"RESET": SubResource("Animation_440o6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_nt3qm"]
radius = 46.0

[node name="BasicEnemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_2rskt")
cooldownAttack = 2.0
speed = 300
Shockwave = ExtResource("2_52n48")

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
visible = false
shape = SubResource("CircleShape2D_7svlq")

[node name="Art" type="Node2D" parent="."]

[node name="LArm" type="Sprite2D" parent="Art"]
self_modulate = Color(0.584314, 0, 0, 1)
position = Vector2(-20, -20)
scale = Vector2(0.075, 0.075)
texture = ExtResource("2_qpj02")

[node name="RArm" type="Sprite2D" parent="Art"]
self_modulate = Color(0.582549, 6.27669e-07, 8.4796e-08, 1)
position = Vector2(20, -20)
scale = Vector2(0.075, 0.075)
texture = ExtResource("2_qpj02")

[node name="Body" type="Sprite2D" parent="Art"]
self_modulate = Color(1, 0, 0, 1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_qpj02")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_nw1a5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ref8m")
}

[node name="SoftBody" type="Area2D" parent="."]
script = ExtResource("4_ugpfv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftBody"]
visible = false
shape = SubResource("CircleShape2D_nt3qm")

[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="SoftBody" to="SoftBody" method="_on_body_entered"]
[connection signal="body_exited" from="SoftBody" to="SoftBody" method="_on_body_exited"]
